{{$NEXT}}

0.08 2020-06-25
-Fix bug in TOML table output generation (thanks ijackson)

0.07 2020-05-08
-Add support for floating time zones in TOML output (thanks ijackson)
-Fix bug where datetimes were being outputed as ISO8601 instead of RFC3339
-Clarified documentation with explicit description of supported perl types for each toml type

0.06 2020-03-30
-Performance improvements in TOML::Tiny::Tokenizer->next_token
-Fix totally broken OO interface (thanks noctux)

0.05 2020-01-21
-POD fixes for TOML::Tiny::Grammar

0.04 2020-01-21
-Remove superfluous dependency on DateTime::Format::RFC3339, which was only
 needed for unit tests

0.03 2020-01-18
-Remove automatic inflation of numerical types using Math::Big(Int|Float);
 this may now be done with inflate_integer and inflate_float

0.02 2020-01-17
-Add MANIFEST.SKIP to prevent dzil from including author scripts

0.01 2020-01-17
-Initial release