@@ -8,7 +8,7 @@ TOML::Tiny - a minimal, pure perl TOML parser and serializer
 
 =head1 VERSION
 
-version 0.08
+version 0.09
 
 =head1 SYNOPSIS
 
@@ -322,6 +322,8 @@ A big thank you to those who have contributed code or bug reports:
 =item L<ijackson|https://github.com/ijackson>
 
 =item L<noctux|https://github.com/noctux>
+
+=item L<oschwald|https://github.com/oschwald>
 
 =back
 
